# Titan-Processing

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  processing.cfg  vcpkg-configuration.json  visionDriver.cpp
Algorithms/: CMakeLists.txt
Algorithms/include/: BlackScreenFilterModule.h  BlueRobot.h  Cone.h  Constants.h  ContourTest.h  CoordinateTransformations.h  Cube.h  FileInputModule.h  Frame.h  GraphicModule.h  GraphicOutputModule.h  HSLFilterModule.h  HSLOutputModule.h  HistProjectionModule.h  HistogramOutputModule.h  IGraphicOutputType.h  IObjectOutputType.h  IOutputType.h  Input.h  InputModule.h  Module.h  MultiModule.h  Object.h  ObjectDetection.h  ObjectDetectionModule.h  Output.h  OutputModule.h  Pixel.h  PositionEstimationModule.h  ProcessingModule.h  RedRobot.h  Robot.h  Vector.h  VisionFunctions.h  VisionProcessor.h
Algorithms/src/: BlackScreenFilterModule.cpp  BlueRobot.cpp  Cone.cpp  ContourTest.cpp  CoordinateTransformations.cpp  Cube.cpp  FileInputModule.cpp  GraphicModule.cpp  GraphicOutputModule.cpp  HSLFilterModule.cpp  HSLOutputModule.cpp  HistProjectionModule.cpp  HistogramOutputModule.cpp  InputModule.cpp  Module.cpp  MultiModule.cpp  Object.cpp  ObjectDetection.cpp  ObjectDetectionModule.cpp  OutputModule.cpp  Pixel.cpp  ProcessingModule.cpp  RedRobot.cpp  Robot.cpp  Vector.cpp  VisionFunctions.cpp  VisionProcessor.cpp
Camera/: CMakeLists.txt
Camera/include/: RealsenseCamera.h  RealsenseCameraModule.h  RealsenseFrame.h
Camera/src/: RealsenseCamera.cpp  RealsenseCameraModule.cpp  RealsenseFrame.cpp
Network/: CMakeLists.txt
Network/include/: NetworkingClient.hpp  NetworkingClientTest.hpp
cmake/: build_examples.cmake  build_library.cmake  build_service.cmake  build_tests.cmake  uninstall.cmake
config/: apriltag-lifecam.camset  apriltags2025-note.md  apriltags2025.json  apriltags2025_threejs.json  config-uc852.json  config.json  lifecam.camset  pseye.camset
config/original/: apriltags2025_threejs.json
example/: CMakeLists.txt  apriltags.json  config.json  examples.md  processing.cfg
example/apriltag/: detect.cpp  detect_directory.cpp  detect_headless.cpp  detect_multi.cpp  detection.cpp  global_detect.cpp  local_detect.cpp  offset_test.cpp  one_cam_detect.cpp
example/helper/: read_config.cpp  undistort.cpp
example/networking/: TRBNetworking.py  common.py  no_reply.cpp  no_reply.py  no_reply_c.c  with_reply.c  with_reply.cpp  with_reply.py  with_reply_c.c
example/util/: convert_config_threejs.cpp  open_stream.cpp  playground.cpp  read_config.cpp  send_tag.cpp  undistort.cpp
include/apriltag/: Apriltag.hpp  ApriltagDetector.hpp  Localizer.hpp  PoseEstimator.hpp  apriltag.hpp  apriltag_detector.hpp  pose_estimator.hpp
include/helper/: Camera.hpp  ConfigReader.hpp  Pose.hpp  Unit.hpp  Vector3D.hpp  config_reader.hpp  pose.hpp  unit.hpp  vector.hpp
include/networking/: Client.h  Client.hpp  client.hpp
include/physics/: PoseFilter.hpp
include/util/: Camera.hpp  CameraVideoStream.hpp  Config.hpp  ConfigReader.hpp  FileImageStream.hpp  FileVideoStream.hpp  Unit.hpp  Vector3D.hpp  VideoStream.hpp
scripts/host-orangepi/: .gitignore  autostart.sh  create-remote-repo.sh  log.sh  no-autostart.sh  ping.sh  push-build.sh  push-fastbuild.sh  push.sh  reboot.sh  rebuild-environment.sh  reset-push-ip.sh  restart-service.sh  set-up-push.sh  ssh.sh  update-environment.sh
scripts/jnano/: autostart-jnano.sh  build.sh  install.sh  no-autostart-jnano.sh  opencv-headers.sh  titanprocessing-service.sh
scripts/orangepi/: autostart.sh  build.sh  fastbuild.sh  no-autostart.sh  titan2022-apriltag-service.sh
src/: TitanProcessingService.cpp  calibration.cpp
src/apriltag/: Apriltag.cpp  ApriltagDetector.cpp  Localizer.cpp  PoseEstimator.cpp  apriltag.cpp
src/helper/: Camera.cpp  ConfigReader.cpp  Pose.cpp  Vector3D.cpp  config_reader.cpp  pose.cpp  vector.cpp
src/networking/: Client.cpp  client.cpp
src/physics/: PoseFilter.cpp
src/util/: Camera.cpp  CameraVideoStream.cpp  Config.cpp  ConfigReader.cpp  FileImageStream.cpp  FileVideoStream.cpp  Vector3D.cpp
test/client/: test_client.cpp  test_config.cpp  test_fileVideoStream.cpp  test_localization.cpp  test_vector.cpp  test_video_io.cpp
test/client/util/: test_client_exec.cpp
test/java/: Main.java  NetworkingServer.java
test/java/types/: NetworkingPose.java  NetworkingTag.java  NetworkingVector.java
test/server/: NetworkingCall.java  NetworkingObserver.java  NetworkingServer.java  ServerTest.java  StartCall.java  StartObserver.java
test/server/types/: NetworkingTag.java  Translation3d.java
tools/: calibration.md  calibration.py  calibration_tester.py  charuco_calibration.py  charuco_generator.py  chess_calibration.py
